--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NBA</title>
+    <title>Spotify Statistics</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
+
+    <header>
+        <h1>Spotify Statistics</h1>
+    </header>
+
+    <div class="categories">
+        
+    </div>
 
 <body>
     
